--- a/example.yml
+++ b/example.yml
@@ -2,6 +2,8 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: even
+
+# api-even
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -13,16 +15,21 @@ spec:
   selector:
     matchLabels:
       app: api-even
+      tier: backend
+      track: stable
   template:
     metadata:
       labels:
         app: api-even
+        tier: backend
+        track: stable
     spec:
       containers:
         - name: api-even
-          image: ghcr.io/chawil/api-even:latest
+          image: ghcr.io/chawil/api-even:6e8b62d433010f9a454a225aa72f605a85c0fe16
           ports:
-            - containerPort: 80
+            - name: http
+              containerPort: 5000
 ---
 apiVersion: v1
 kind: Service
@@ -31,7 +38,56 @@ metadata:
   namespace: even
 spec:
   type: ClusterIP
-  ports:
-    - port: 80
   selector:
     app: api-even
+    tier: backend
+  ports:
+    - protocol: TCP
+      port: 80
+      targetPort: http
+
+# api-even-front
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: api-even-front
+  namespace: even
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: api-even-front
+      tier: frontend
+      track: stable
+  template:
+    metadata:
+      labels:
+        app: api-even-front
+        tier: frontend
+        track: stable
+    spec:
+      containers:
+        - name: api-even-front
+          image: ghcr.io/chawil/api-even-front:f30788df3eb4f52543365635b286d138ae2f6557
+          env:
+            - name: BACKEND_URL
+              value: http://api-even
+          ports:
+            - name: http
+              containerPort: 8080
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: api-even-front
+  namespace: even
+spec:
+  type: LoadBalancer
+  selector:
+    app: api-even-front
+    tier: frontend
+  ports:
+    - protocol: TCP
+      port: 80
+      targetPort: http
