--- a/kustomize/base/base.yml
+++ b/kustomize/base/base.yml
@@ -34,6 +34,13 @@ spec:
           ports:
             - name: http
               containerPort: 5000
+          resources:
+            requests:
+              memory: "20Mi"
+              cpu: "2m"
+            limits:
+              memory: "40Mi"
+              cpu: "4m"
           startupProbe:
             initialDelaySeconds: 1
             periodSeconds: 1
@@ -93,6 +100,13 @@ spec:
           ports:
             - name: http
               containerPort: 8080
+          resources:
+            requests:
+              memory: "5Mi"
+              cpu: "1m"
+            limits:
+              memory: "10Mi"
+              cpu: "2m"
           startupProbe:
             initialDelaySeconds: 1
             periodSeconds: 1
